--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -3,3 +3,7 @@ queue:
   rate: 5/s
   retry_parameters:
     task_retry_limit: 0
+- name: queue-line
+  rate: 5/s
+  retry_parameters:
+    task_retry_limit: 0
