--- a/app/app.yaml
+++ b/app/app.yaml
@@ -15,6 +15,10 @@ handlers:
   script: _go_app
   login: admin
 
+- url: /cron/ustream
+  script: _go_app
+  login: admin
+
 - url: /queue/tweet
   script: _go_app
   login: admin
