--- a/cmd/line_server/Makefile
+++ b/cmd/line_server/Makefile
@@ -5,3 +5,8 @@ all:
 
 build:
 	GOOS=linux GOARCH=amd64 go build -o line-server
+
+deploy:
+	@make build
+	scp line-server deploy.line-server:momoclo/line_server/
+
