--- a/app/.env.sample
+++ b/app/.env.sample
@@ -2,4 +2,4 @@ TWITTER_CONSUMER_KEY=""
 TWITTER_CONSUMER_SECRET=""
 TWITTER_ACCESS_TOKEN=""
 TWITTER_ACCESS_TOKEN_SECRET=""
-LINE_SERVER_PORT=":1234"
+LINE_SERVER_ADDRESS="localhost:1234"
