Add reminder notification

--- a/appengine/app/app.yaml
+++ b/appengine/app/app.yaml
@@ -19,6 +19,10 @@ handlers:
   script: _go_app
   login: admin
 
+- url: /cron/reminder
+  script: _go_app
+  login: admin
+
 - url: /queue/tweet
   script: _go_app
   login: admin
