--- a/appengine/app/cron.yaml
+++ b/appengine/app/cron.yaml
@@ -7,4 +7,4 @@ cron:
   schedule: every 1 minutes
 - description: 5 minutely reminder job
   url: /cron/reminder
-  schedule: every 5 minutes
+  schedule: every 5 minutes synchronized
