Add linebot env

--- a/appengine/app/.env.sample
+++ b/appengine/app/.env.sample
@@ -2,4 +2,7 @@ TWITTER_CONSUMER_KEY=""
 TWITTER_CONSUMER_SECRET=""
 TWITTER_ACCESS_TOKEN=""
 TWITTER_ACCESS_TOKEN_SECRET=""
-LINE_SERVER_ADDRESS="localhost:1234"
+LINEBOT_SERVER_ADDRESS="localhost:1234"
+LINEBOT_CHANNEL_ID=""
+LINEBOT_CHANNEL_SECRET=""
+LINEBOT_CHANNEL_MID=""
