--- a/appengine/app/.env.sample
+++ b/appengine/app/.env.sample
@@ -8,3 +8,4 @@ GOOGLE_CUSTOM_SEARCH_API_ID=""
 GOOGLE_CUSTOM_SEARCH_API_KEY=""
 LINENOTIFY_CLIENT_ID=""
 LINENOTIFY_CLIENT_SECRET=""
+LINENOTIFY_TOKEN_KEY=""
