Add linebot/help page

--- a/appengine/app/app.yaml
+++ b/appengine/app/app.yaml
@@ -33,6 +33,8 @@ handlers:
 
 - url: /linebot/callback
   script: _go_app
+- url: /linebot/help
+  script: _go_app
 
 - url: /linenotify/on
   script: _go_app
