Add images for help page

--- a/appengine/app/app.yaml
+++ b/appengine/app/app.yaml
@@ -11,6 +11,9 @@ automatic_scaling:
   max_pending_latency: automatic
 
 handlers:
+- url: /images
+  static_dir: public/images
+
 - url: /cron/crawl
   script: _go_app
   login: admin
