--- a/appengine/app/app.yaml
+++ b/appengine/app/app.yaml
@@ -38,6 +38,8 @@ handlers:
   script: _go_app
 - url: /linebot/help
   script: _go_app
+- url: /linebot/about
+  script: _go_app
 
 - url: /linenotify/on
   script: _go_app
