--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ sudo: false
 install:
   - wget -q -O - https://github.com/Masterminds/glide/releases/download/0.10.2/glide-0.10.2-linux-amd64.tar.gz | tar xvz
   - linux-amd64/glide install
+  - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.40.zip -O go_appengine_sdk.zip
+  - unzip go_appengine_sdk.zip
+  - export PATH=$PATH:$PWD/go_appengine
 script:
   - make test
