--- a/glide.yaml
+++ b/glide.yaml
@@ -12,7 +12,7 @@ import:
   subpackages:
   - linebot
 - package: github.com/mjibson/goon
-- package: github.com/utahta/uststat
+- package: github.com/utahta/ustream-live-status
 - package: github.com/pkg/errors
   version: ^0.8.0
 - package: golang.org/x/net
@@ -29,3 +29,9 @@ import:
   - taskqueue
   - urlfetch
 - package: github.com/utahta/go-atomicbool
+- package: github.com/gorilla/mux
+  version: ^1.1.0
+- package: github.com/gorilla/context
+  version: ^1.1.0
+- package: github.com/urfave/negroni
+  version: ^0.2.0
