--- a/appengine/app/.env.sample
+++ b/appengine/app/.env.sample
@@ -9,4 +9,6 @@ GOOGLE_CUSTOM_SEARCH_API_KEY=""
 LINENOTIFY_CLIENT_ID=""
 LINENOTIFY_CLIENT_SECRET=""
 LINENOTIFY_TOKEN_KEY=""
-DISABLE_TWEET=""
+
+#LINENOTIFY_DISABLE="1"
+#TWEET_DISABLE="1"
