--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ before_install:
   - chmod 600 .netrc
   - cp .netrc ~
 install:
-  - wget -q -O - https://github.com/Masterminds/glide/releases/download/0.10.2/glide-0.10.2-linux-amd64.tar.gz | tar xvz
-  - linux-amd64/glide install
-  - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.48.zip -O go_appengine_sdk.zip
-  - unzip -q go_appengine_sdk.zip
-  - export PATH=$PATH:$PWD/go_appengine
+  - mkdir -p $GOPATH/{bin,shared}
+  - curl -sL https://github.com/Masterminds/glide/releases/download/0.10.2/glide-0.10.2-linux-amd64.tar.gz | tar --wildcards -xz -C $GOPATH/bin/ --strip=1 "*/glide"
+  - glide install
+  - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.48.zip -O $GOPATH/shared/go_appengine_sdk.zip
+  - unzip -q $GOPATH/shared/go_appengine_sdk.zip -d $GOPATH/shared
+  - export PATH=$PATH:$GOPATH/shared/go_appengine
 script:
   - make test
