--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - 1.6
+  - 1.7
 sudo: false
 before_install:
   - openssl aes-256-cbc -K $encrypted_75579ba057cb_key -iv $encrypted_75579ba057cb_iv -in .netrc.enc -out .netrc -d
@@ -8,10 +8,10 @@ before_install:
   - cp .netrc ~
 install:
   - mkdir -p $GOPATH/{bin,shared}
-  - curl -sL https://github.com/Masterminds/glide/releases/download/0.10.2/glide-0.10.2-linux-amd64.tar.gz | tar --wildcards -xz -C $GOPATH/bin/ --strip=1 "*/glide"
-  - glide install
-  - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.48.zip -O $GOPATH/shared/go_appengine_sdk.zip
+  - go get github.com/golang/dep/cmd/dep
+  - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.54.zip -O $GOPATH/shared/go_appengine_sdk.zip
   - unzip -q $GOPATH/shared/go_appengine_sdk.zip -d $GOPATH/shared
   - export PATH=$PATH:$GOPATH/shared/go_appengine
+  - make install
 script:
   - make test
