Change settings format .env to .toml

--- a/app/backend/Makefile
+++ b/app/backend/Makefile
@@ -1,11 +1,11 @@
 serve:
-	@cp .env.local env
+	@cp config/dev.toml config/deploy.toml
 	@goapp serve .
 
 deploy-prod:
-	@cp .env.prod env
+	@cp config/prod.toml config/deploy.toml
 	@appcfg.py -A momoclo-channel update .
 
 deploy-dev:
-	@cp .env.dev env
+	@cp config/dev.toml config/deploy.toml
 	@appcfg.py -A momoclo-channel-dev update .
