--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -131,3 +131,7 @@
 [[constraint]]
   name = "google.golang.org/appengine"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/pelletier/go-toml"
+  version = "1.0.0"
