--- a/app/queue/app.yaml
+++ b/app/queue/app.yaml
@@ -3,15 +3,16 @@ version: v1-0-0
 runtime: go
 api_version: go1
 
-instance_class: F2
-automatic_scaling:
-  min_idle_instances: 0
-  max_idle_instances: 1
-  max_concurrent_requests: 80
-  min_pending_latency: 3000ms
-  max_pending_latency: automatic
+instance_class: B2
+basic_scaling:
+  idle_timeout: 1m
+  max_instances: 1
 
 handlers:
+- url: /_ah/start
+  script: _go_app
+  login: admin
+
 - url: /queue/tweet
   script: _go_app
   login: admin
