--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -131,3 +131,7 @@
 [[constraint]]
   name = "github.com/pelletier/go-toml"
   version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/cenkalti/backoff"
