--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: go
 go:
-  - 1.7
+  - 1.6
 sudo: false
 before_install:
   - openssl aes-256-cbc -K $encrypted_75579ba057cb_key -iv $encrypted_75579ba057cb_iv -in .netrc.enc -out .netrc -d
   - chmod 600 .netrc
   - cp .netrc ~
-install:
   - mkdir -p $GOPATH/{bin,shared}
   - go get github.com/golang/dep/cmd/dep
+  - curl -fSL https://github.com/haya14busa/reviewdog/releases/download/0.9.7/reviewdog_linux_amd64 -o ~/bin/reviewdog && chmod +x ~/bin/reviewdog
+install:
   - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.54.zip -O $GOPATH/shared/go_appengine_sdk.zip
   - unzip -q $GOPATH/shared/go_appengine_sdk.zip -d $GOPATH/shared
-  - export PATH=$PATH:$GOPATH/shared/go_appengine
+  - export PATH=$PATH:$GOPATH/bin:$GOPATH/shared/go_appengine
   - make install
 script:
   - make test
+  - golint ./... | reviewdog -f=golint -ci=travis
