--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,15 @@ before_install:
   - chmod 600 .netrc
   - cp .netrc ~
   - mkdir -p $GOPATH/{bin,shared}
-  - go get github.com/golang/dep/cmd/dep
-  - curl -fSL https://github.com/haya14busa/reviewdog/releases/download/0.9.7/reviewdog_linux_amd64 -o ~/bin/reviewdog && chmod +x ~/bin/reviewdog
-install:
-  - wget -q https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.54.zip -O $GOPATH/shared/go_appengine_sdk.zip
+  - go get github.com/golang/lint/golint
+  - curl -fSL https://github.com/golang/dep/releases/download/v0.3.0/dep-linux-amd64.zip -o $GOPATH/shared/dep.zip
+  - unzip -q $GOPATH/shared/dep.zip -d $GOPATH/bin
+  - curl -fSL https://github.com/haya14busa/reviewdog/releases/download/0.9.7/reviewdog_linux_amd64 -o $GOPATH/bin/reviewdog && chmod +x $GOPATH/bin/reviewdog
+  - curl -fSL https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.54.zip -o $GOPATH/shared/go_appengine_sdk.zip
   - unzip -q $GOPATH/shared/go_appengine_sdk.zip -d $GOPATH/shared
   - export PATH=$PATH:$GOPATH/bin:$GOPATH/shared/go_appengine
+install:
   - make install
 script:
   - make test
-  - golint ./... | reviewdog -f=golint -ci=travis
+  - golint $(go list ./... | grep -v vendor) | reviewdog -f=golint -ci=travis
