--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -126,7 +126,7 @@
 
 [[constraint]]
   name = "google.golang.org/appengine"
-  version = "1.0.0"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/pelletier/go-toml"
