Add tweet usecase
Rename Crawl to FeedCrawl
Refactor packages (adapter/gateway and domain/model)
Refactor latest entry url update logic
Implement tweet client

--- a/appengine/queue/app.yaml
+++ b/appengine/queue/app.yaml
@@ -13,10 +13,6 @@ handlers:
   script: _go_app
   login: admin
 
-- url: /queue/tweet
-  script: _go_app
-  login: admin
-
-- url: /queue/line
+- url: /.*
   script: _go_app
   login: admin
