--- a/appengine/backend/queue.yaml
+++ b/appengine/backend/queue.yaml
@@ -1,4 +1,9 @@
 queue:
+- name: enqueue
+  rate: 10/s
+  target: default
+  retry_parameters:
+    task_retry_limit: 5
 - name: queue-tweet
   rate: 100/s
   target: queue
