--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -87,8 +87,8 @@
   name = "github.com/mjibson/goon"
 
 [[constraint]]
+  branch = "master"
   name = "github.com/pkg/errors"
-  version = "0.8.0"
 
 [[constraint]]
   name = "github.com/urfave/negroni"
@@ -96,7 +96,7 @@
 
 [[constraint]]
   name = "github.com/utahta/go-linenotify"
-  version = "0.1.0"
+  version = "0.4.0"
 
 [[constraint]]
   branch = "master"
