--- a/appengine/backend/queue.yaml
+++ b/appengine/backend/queue.yaml
@@ -6,11 +6,13 @@ queue:
     task_retry_limit: 5
 - name: queue-tweet
   rate: 100/s
+  bucket_size: 20
   target: queue
   retry_parameters:
     task_retry_limit: 5
 - name: queue-line
   rate: 100/s
+  bucket_size: 20
   target: queue
   retry_parameters:
     task_retry_limit: 5
