--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - chmod 600 .netrc
   - cp .netrc ~
   - mkdir -p $GOPATH/{bin,shared}
-  - go get github.com/golang/lint/golint
+  - go get golang.org/x/lint/golint
   - curl -fSL https://github.com/golang/dep/releases/download/v0.3.0/dep-linux-amd64.zip -o $GOPATH/shared/dep.zip
   - unzip -q $GOPATH/shared/dep.zip -d $GOPATH/bin
   - curl -fSL https://github.com/haya14busa/reviewdog/releases/download/0.9.7/reviewdog_linux_amd64 -o $GOPATH/bin/reviewdog && chmod +x $GOPATH/bin/reviewdog
